<resources>
    <string name="app_name">TodoList</string>
    <string name="action_settings">Settings</string>
    <string name="text_todo_title">Title</string>
    <string name="hint_todo_title">Insert a descriptive title here...</string>
    <string name="text_todo_notes">Notes</string>
    <string name="hint_todo_notes">Add Notes here...</string>
    <string name="text_save_button">Save</string>
    <string name="text_cancel_button">Cancel</string>
    <string name="text_checkbox_completed">Completed</string>
    <string name="text_edit_button">Edit</string>
    <string name="text_delete_button">Delete</string>
    <string name="text_last_update">Last updated:</string>
</resources>
