<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_todo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.juan.practice.todolist.activities.EditTodoActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/text_todo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTodoTitle"
        android:layout_weight="1"
        android:hint="@string/hint_todo_title" />

    <CheckBox
        android:text="@string/text_checkbox_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkCompleted"
        android:layout_weight="1" />

    <TextView
        android:text="@string/text_todo_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTodoNotes"
        android:layout_weight="1"
        android:hint="@string/hint_todo_notes"
        android:lines="8" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:text="@string/text_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:text="@string/text_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless" />
    </LinearLayout>

</LinearLayout>
