<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:textSize="24sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20px"
        android:paddingBottom="20px"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:text="@string/text_last_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLast"
                android:layout_weight="1"
                android:textSize="16sp" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLastUpdated"
                android:layout_weight="1"
                android:textStyle="normal|italic" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editButton"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_edit"
            android:text="@string/text_edit_button" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteButton"
            android:layout_weight="1"
            android:text="@string/text_delete_button"
            android:src="@android:drawable/ic_delete" />





    </LinearLayout>

</LinearLayout>